--- a/README
+++ b/README
@@ -2,23 +2,8 @@
 
 测试思路：
 生成一个长度为20的数组，每条记录之间的时间间隔为1秒，任取其中的几个位置（index）来模拟不同时点的请求。
-正确的结果应为：按 topic 的 updatedAt 的倒序排序，去除用户订阅的记录，limit(n)。
-
-
-mongodb：
-
-User Schema: {_id: ObjectId(***), subscribed: [ObjectId(***), ...]}
-Topic Schema: {_id: ObjectId(***), title: ***, createdAt: Date(), updatedAt: Date()}
-
-subscribed = User.find({_id: ObjectId(userId)});
-Topic.find({_id: {$nin: subscribed}, updatedAt: {$gt: time}}).limit(count).sort({updatedAt: -1});
-
-
-1，count >= 0 && count < n, 返回记录数：count；
-2, count >= n，返回记录数：n；
-其中，count 为 top-n 集合减去 subscribed 集合后的数量；
+正确的结果应为：去除用户订阅的记录后，按 topic 的 updatedAt 的倒序排序，取前 n 条。
 
 详细情况参见代码/测试的注释
-
 
 P.S.: 之前的 commit 理解有误：以为需要在返回结果中剔除上次返回的 topic，因此在结果中返回了 refreshUrl 来记录上次请求的时间，以便剔除上次请求的结果。
