--- a/README
+++ b/README
@@ -1,8 +1,13 @@
 本需求为：取用户未订阅的 topic 的 top-n.
 
 测试思路：
+
 生成一个长度为20的数组，每条记录之间的时间间隔为1秒，任取其中的几个位置（index）来模拟不同时点的请求。
-正确的结果应为：去除用户订阅的记录后，按 topic 的 updatedAt 的倒序排序，取前 n 条。
+
+/topics/feed 去除用户订阅的记录后，按 topic 的 updatedAt 的倒序排序，取前 n 条。
+/topics/feed2 刷新模式：用户订阅本次没有订阅，取当前刷新请求时的新topic；
+              替换模式：用户本次有订阅，先取当前新topic，如果数量足够替换已订阅topic，那么直接返回；否则，取之后的未订阅topic，与新topic合并后返回；
+
 
 详细情况参见代码/测试的注释
 
